# datarush

./: .gitignore  .importlinter  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
datarush/: __main__.py  config.py  exceptions.py  form.py  run.py
datarush/core/: dataflow.py  template_manager.py  templates.py  types.py
datarush/core/operations/: __init__.py  dropna.py  filter_row.py  sort.py
datarush/core/operations/sinks/: s3_sink.py
datarush/core/sources/: __init__.py  http_source.py  local_file_source.py  s3_object_source.py
datarush/frontend/: main.py
datarush/ui/: form.py  main.py  operations.py  parameters.py  save.py  sidebar.py
datarush/utils/: jinja2.py  misc.py  s3_client.py  type_utils.py  types.py
docs/: AdvancedUsage.md  Configuration.md  GettingStarted.md  OperationModelTypes.md  Operations.md  README.md  Templates.md
scripts/: generate_new_operation.py  run_ui.py
src/datarush/: __init__.py  __main__.py  config.py  exceptions.py  run.py
src/datarush/core/: dataflow.py  templates.py  types.py
src/datarush/core/operations/: __init__.py
src/datarush/ui/: __init__.py  form.py  main.py  operations.py  parameters.py  raw_template.py  save.py  sidebar.py  state.py
src/datarush/utils/: conditions.py  jinja2.py  logging.py  misc.py  s3_client.py  type_utils.py
tests/: test_datarush.py
tests/unit/: conftest.py  test_conditions_utils.py  test_config.py  test_dataflow.py  test_extract_regex_group.py  test_jinja2.py  test_logging.py  test_operations.py  test_run.py  test_s3_client.py  test_templates.py  test_type_utils.py  test_ui_main.py
tests/unit/operations/: conftest.py  test_add_range_column.py  test_assert_has_columns.py  test_astype.py  test_calculate.py  test_calculate_hash.py  test_change_case.py  test_columns_to_dict.py  test_concatenate_tables.py  test_copy_column.py  test_copy_table.py  test_deduplicate_column_values.py  test_deduplicate_rows.py  test_derive_column.py  test_explode.py  test_fillna.py  test_group_by.py  test_join.py  test_melt_operation.py  test_normalize_empty_values.py  test_parse_datetime.py  test_parse_json_column.py  test_pivot_table.py  test_rename_columns.py  test_rename_table.py  test_replace.py  test_s3_dataset_sink.py  test_s3_dataset_source.py  test_send_http_request.py  test_set_header.py  test_split_table_on_column.py  test_strip.py  test_transpose.py  test_unset_header.py  test_wide_to_long.py
(+51 files in other folders)
