[metadata]
name = datarush
author = Vadim Titov
author_email = titov.hse@gmail.com
description = No-code data pipelines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vadimtitov/datarush
project_urls =
    Bug Tracker = https://github.com/vadimtitov/datarush/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.12
install_requires =
    pydantic
    pandas
    streamlit
    streamlit-ace
    boto3
    envarify
    requests
    python-dotenv
    jinja2
[options.packages.find]
where=src

[options.extras_require]
test = pytest

[coverage:run]
branch = true
parallel = true
source = src/datarush
data_file = .coverage

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover

