[metadata]
name = datarush
author = Vadim Titov
author_email = titov.hse@gmail.com
description = No-code data pipelines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vadimtitov/datarush
project_urls =
    Bug Tracker = https://github.com/vadimtitov/datarush/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.11
install_requires =
    pydantic>=2.10.6,<3.0.0
    pandas>=2.2.3,<3.0.0
    streamlit>=1.46.0,<2.0.0
    streamlit-ace>=0.1.1,<1.0.0
    streamlit-modal>=0.1.2,<1.0.0
    boto3>=1.37.4,<2.0.0
    envarify>=1.5.0,<2.0.0
    requests>=2.32.3,<3.0.0
    python-dotenv>=1.0.1,<2.0.0
    jinja2>=3.1.5,<4.0.0
    awswrangler>=3.11.0,<4.0.0
    dateparser>=1.2.2,<2.0.0
[options.packages.find]
where=src

[options.extras_require]
test = pytest

[coverage:run]
branch = true
parallel = true
source = src/datarush
data_file = .coverage

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover

